apps/invokeai-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invokeai-api
  namespace: invokeai-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invokeai-api
  template:
    metadata:
      labels:
        app: invokeai-api
    spec:
      containers:
      - name: invokeai-api
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com/flask-api-invokeai:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
