apps/invokeai-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invokeai-api
  namespace: invokeai-api
spec:
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: invokeai-api
